# Landman

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  Makefile  PROJECT_STATE.md  README.md  TASKS.md  alembic.ini  docker-compose.yml
apps/api/: Dockerfile  README.md  pyproject.toml
apps/api/rjacq/: __init__.py  main.py  openapi.py
apps/api/rjacq/api/: __init__.py  _stub.py  acquisitions.py  admin.py  auth.py  budget.py  comps.py  deals.py  defaults_config.py  feedback.py  gates.py  labor.py  mapping.py  operating.py  promote.py  webhooks.py
apps/api/rjacq/comps/: __init__.py  distance.py  enrichment.py  geocode.py  jobs.py  repository.py  service.py  sources.py
apps/api/rjacq/core/: __init__.py  app_config.py  auth.py  (+8 more)
apps/api/tests/: conftest.py  test_acquisitions.py  test_admin_integrations.py  test_alembic_env_url.py  test_auth.py  test_budget.py  test_budget_defaults.py  test_census_provider.py  test_comps.py  test_comps_discovery.py  test_comps_enrichment.py  test_contract.py  test_deals.py  test_defaults_apply.py  test_defaults_config.py  test_defaults_rules.py  test_extraction_stabilized.py  test_feedback.py  test_gates.py  test_gl_chart.py  test_gl_rollup.py  test_health_and_stubs.py  test_ingestion.py  test_labor.py  test_labor_service.py  test_mapping.py  test_migration_safety.py  test_migrations_and_seeds.py  test_om_extract.py  test_operating.py  test_population.py  test_proforma.py  test_promote.py  test_promote_api.py  test_shield.py  test_storage.py  test_underwriting.py  test_underwriting_defaults.py
(+220 files in other folders)
