[project]
name = "rjacq"
version = "0.2.0"
description = "RJourney Acquisitions Platform — API, domain modules, and workers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "arq>=0.26",
    "redis>=5.0",
    "boto3>=1.34",
    "structlog>=24.1",
    "sentry-sdk>=2.10",
    "python-jose[cryptography]>=3.3",
    "httpx>=0.27",
    "itsdangerous>=2.2",
    "openpyxl>=3.1",
    "python-multipart>=0.0.9",
    "anthropic>=0.69",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "testcontainers[postgres]>=4.7",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-python-jose>=3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rjacq"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["rjacq", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "W", "C4", "SIM"]
ignore = [
    "B008",   # FastAPI Depends() in defaults is idiomatic
    "UP042",  # explicit `(str, Enum)` is intentional; values stored via values_callable
]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
